--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,8 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_port = COM4
+monitor_speed = 115200
 upload_port = COM4
 lib_deps = knolleary/PubSubClient@^2.8
+build_flags = -std=gnu++2a
+build_unflags = -std=gnu++11
