--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,10 @@
 platform = espressif32
 board = esp32cam
 framework = arduino
-monitor_port = COM5
+monitor_port = COM4
 monitor_speed = 115200
-upload_port = COM5
+upload_port = COM4
 lib_deps = knolleary/PubSubClient@^2.8
-build_flags = -std=gnu++2a
+build_flags = -std=gnu++2a, -g
 build_unflags = -std=gnu++11
+build_type = debug
